fix : Adjust contrast parameters for the dark mode.

--- a/005-symfony-bricount/assets/styles/index.css
+++ b/005-symfony-bricount/assets/styles/index.css
@@ -10,7 +10,7 @@
    ============================================ */
 
 .main-content {
-    padding: 1.5rem 1rem;
+    padding: 1rem 3rem;
     width: 100%;
 }
 
